--- a/static/styles/output.css
+++ b/static/styles/output.css
@@ -82,7 +82,7 @@ footer {
 .page {
     height: auto;
     min-height: 100vh;
-    padding: 2em;
+    padding: 5em 2em 3em; 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -104,17 +104,19 @@ footer {
     height: auto;
     border-radius: 8px;
     padding: 3em;
+    margin-top: 3em;
 }
 
 .buttons {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    margin: 2em 0;
+    margin: 4em 0 2em;
     flex-wrap: wrap;
     gap: 2em;
 }
-.buttons button{
+.buttons a{
+    color: #000;
     border-radius: 3rem;
     font-weight: 500;
     cursor: pointer;
@@ -127,49 +129,20 @@ footer {
     background-color: rgb(167, 173, 241);
     transition: all 0.2s;
 }
-.buttons button:hover{
+.buttons a:hover{
    transform: scale(1.08);
 }
-.buttons button:focus {
+.buttons a:focus {
     box-shadow: 0 0 3px 0px rgb(167, 173, 241);
     transform: scale(1.08);
 }
 
-.form-input {
+.result {
     display: flex;
-    margin: 2em;
-    flex-direction: column;
-    font-size: 1.3rem;
+    align-items: center;
+    justify-content: center;
 }
-form {
-    display: flex;
-    flex-direction: column;
-}
-
-.form-input label {
-    margin: 1em 0;
-    font-weight: 400;
-}
-.form-input input {
-    border-radius: 5px;
-    border: 1px solid rgba(0, 0, 0, 0);
-    padding: 0.5em;
-    font-size: 1.3rem;
-}
-#mail {
-    resize: none;
-    border-radius: 5px;
-    padding: 0.5em;
-    font-size: 1.5rem;
-    background-color: rgba(235, 229, 255, 0);
-    border: 1px solid lavender;
-    transition: all .2s;
-}
-#mail:focus {
-    border: 1px solid rgb(167, 173, 241);
-}
-
-.form-input textarea:focus {
-    outline: none;
-    color: aliceblue;
+.mail p {
+    text-align: left;
+    font-size: .5rem;
 }
