--- a/templates/home.html
+++ b/templates/home.html
@@ -12,10 +12,10 @@
     <header>
         <nav class="nav-bar">
             <a id="project-title" class="nav-item" href="/">SpamFilter</a>
-            <!-- <ul>
+            <ul>
                 <li><a class="nav-item" href="#home">Home</a></li>
                 <li><a class="nav-item" href="#contact">Contact</a></li>
-            </ul> -->
+            </ul>
         </nav>
     </header>
     <img class="bg" src="/static/files/moon.jpg" alt="bg">
@@ -34,15 +34,24 @@
                     </div>
                     
                     <div class="buttons">
-                        <button type="reset">Reset</button>
+                        <button type="reset">Clear</button>
                         <button type="submit">Submit</button>
                     </div>
                 </form>
             </div>
         </div>
-        <footer class="footer">
-            <p>copyright © SpamFilter | All rights reserved.</p>
-        </footer>
+        <div class="page" id="contact">
+            <div class="link_box">
+                <a href="https://www.linkedin.com/in/iamhimanshu98/">Linkedin</a>
+                <a href="https://www.instagram.com/i.am.himanshu98/">Instagram</a>
+                <a href="https://github.com/iamhimanshu98">GitHub</a>
+                <a href="https://leetcode.com/u/iamhimanshu98/">Leetcode</a>
+            </div>
+            <footer class="footer">
+                <p>copyright © SpamFilter | All rights reserved.</p>
+            </footer>
+        </div>
+
     </main>
 
 </body>
