--- a/templates/output.html
+++ b/templates/output.html
@@ -25,14 +25,14 @@
                 <h2>Your mail</h2>
                 <hr>
                 <div class="mail">
-                    <p>{{ mail }}</p>
+                    <p id="output">{{ mail }}</p>
                 </div>
-                <h2>Prediction Result</h2>
-                <hr>
+                <!-- <h2>Prediction Result</h2>
+                <hr> -->
                 <div class="result">
                     <p><strong>Email Type : </strong> {{ output }}</p>
                 </div>
-                <hr>
+                <!-- <hr> -->
                 <div class="buttons">
                     <a href="/">Go Back</a>
                 </div>
