--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
             <a id="project-title" class="nav-item" href="/">SpamFilter</a>
             <ul>
                 <li><a class="nav-item" href="#home">Home</a></li>
-                <li><a class="nav-item" href="#contact">Contact</a></li>
+                <!-- <li><a class="nav-item" href="#contact">Contact</a></li> -->
             </ul>
         </nav>
     </header>
@@ -39,17 +39,17 @@
                     </div>
                 </form>
             </div>
-        </div>
+        <!-- </div>
         <div class="page" id="contact">
             <div class="link_box">
                 <a href="https://www.linkedin.com/in/iamhimanshu98/">Linkedin</a>
                 <a href="https://www.instagram.com/i.am.himanshu98/">Instagram</a>
                 <a href="https://github.com/iamhimanshu98">GitHub</a>
                 <a href="https://leetcode.com/u/iamhimanshu98/">Leetcode</a>
-            </div>
-            <footer class="footer">
+            </div> -->
+            <!-- <footer class="footer">
                 <p>copyright © SpamFilter | All rights reserved.</p>
-            </footer>
+            </footer> -->
         </div>
 
     </main>
