--- a/static/styles/home.css
+++ b/static/styles/home.css
@@ -10,9 +10,9 @@
     outline: none;
 }
 
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
     display: none;
-}
+} */
 
 html {
     scroll-behavior: smooth;
@@ -20,7 +20,7 @@ html {
 }
 
 body {
-    background-color:rgb(138, 151, 236);
+    background-color:rgb(48, 59, 135);
 }
 main {
     backdrop-filter: blur(10rem);
@@ -62,6 +62,9 @@ footer {
     border: 1px solid rgba(255, 255, 255, 0);
     transition: all 0.2s;
     border-radius: 1px;
+}
+.nav-bar li{
+    font-size: large;
 }
 .nav-item:hover{
     color: rgb(204, 206, 234);
